Test SAML authentication when role mapper returns empty roles