@@ -336,51 +336,63 @@ public class SamlRealmTests extends SamlTestCase {
         );
     }
 
-    public void testAuthenticateWithRoleMapping() throws Exception {
-        final boolean excludeRoles = randomBoolean();
+    private UserRoleMapper mockRoleMapper(Set<String> rolesToReturn, AtomicReference<UserRoleMapper.UserData> userData) {
         final UserRoleMapper roleMapper = mock(UserRoleMapper.class);
-        AtomicReference<UserRoleMapper.UserData> userData = new AtomicReference<>();
         Mockito.doAnswer(invocation -> {
             assert invocation.getArguments().length == 2;
             userData.set((UserRoleMapper.UserData) invocation.getArguments()[0]);
             @SuppressWarnings("unchecked")
             ActionListener<Set<String>> listener = (ActionListener<Set<String>>) invocation.getArguments()[1];
-            listener.onResponse(Set.of("superuser", "kibana_admin"));
+            listener.onResponse(rolesToReturn);
             return null;
         }).when(roleMapper).resolveRoles(any(UserRoleMapper.UserData.class), anyActionListener());
+        return roleMapper;
+    }
 
+    public void testAuthenticateWithEmptyRoleMapping() throws Exception {
+        final AtomicReference<UserRoleMapper.UserData> userData = new AtomicReference<>();
+        final UserRoleMapper roleMapper = mockRoleMapper(Set.of(), userData);
+
+        final boolean testWithDelimiter = randomBoolean();
+        final AuthenticationResult<User> result = performAuthentication(
+            roleMapper,
+            randomBoolean(),
+            randomBoolean(),
+            randomFrom(Boolean.TRUE, Boolean.FALSE, null),
+            false,
+            randomBoolean() ? REALM_NAME : null,
+            testWithDelimiter ? List.of("STRIKE Team: Delta$shield") : Arrays.asList("avengers", "shield"),
+            testWithDelimiter ? "$" : null,
+            randomBoolean() ? List.of("superuser", "kibana_admin") : randomFrom(List.of(), null)
+        );
+        assertThat(result, notNullValue());
+        assertThat(result.getStatus(), equalTo(AuthenticationResult.Status.SUCCESS));
+        assertThat(result.getValue().roles().length, equalTo(0));
+    }
+
+    public void testAuthenticateWithRoleMapping() throws Exception {
+        final AtomicReference<UserRoleMapper.UserData> userData = new AtomicReference<>();
+        final UserRoleMapper roleMapper = mockRoleMapper(Set.of("superuser", "kibana_admin"), userData);
+
+        final boolean excludeRoles = randomBoolean();
+        final List<String> rolesToExclude = excludeRoles ? List.of("superuser") : randomFrom(List.of(), null);
         final boolean useNameId = randomBoolean();
         final boolean principalIsEmailAddress = randomBoolean();
         final Boolean populateUserMetadata = randomFrom(Boolean.TRUE, Boolean.FALSE, null);
         final String authenticatingRealm = randomBoolean() ? REALM_NAME : null;
         final boolean testWithDelimiter = randomBoolean();
-        final AuthenticationResult<User> result;
-        final List<String> rolesToExclude = excludeRoles ? List.of("superuser") : randomFrom(List.of(), null);
-        if (testWithDelimiter) {
-            result = performAuthentication(
-                roleMapper,
-                useNameId,
-                principalIsEmailAddress,
-                populateUserMetadata,
-                false,
-                authenticatingRealm,
-                List.of("STRIKE Team: Delta$shield"),
-                "$",
-                rolesToExclude
-            );
-        } else {
-            result = performAuthentication(
-                roleMapper,
-                useNameId,
-                principalIsEmailAddress,
-                populateUserMetadata,
-                false,
-                authenticatingRealm,
-                Arrays.asList("avengers", "shield"),
-                null,
-                rolesToExclude
-            );
-        }
+        final AuthenticationResult<User> result = performAuthentication(
+            roleMapper,
+            useNameId,
+            principalIsEmailAddress,
+            populateUserMetadata,
+            false,
+            authenticatingRealm,
+            testWithDelimiter ? List.of("STRIKE Team: Delta$shield") : Arrays.asList("avengers", "shield"),
+            testWithDelimiter ? "$" : null,
+            rolesToExclude
+        );
+
         assertThat(result, notNullValue());
         assertThat(result.getStatus(), equalTo(AuthenticationResult.Status.SUCCESS));
         assertThat(result.getValue().principal(), equalTo(useNameId ? "clint.barton" : "cbarton"));
